<resources>
    <string name="app_name">CombinatoricsCalculator</string>
    <string name="fnc_name_perm">Permutations</string>
    <string name="fnc_name_permRep">PermutationsWithRep</string>
    <string name="fnc_name_plac">Placements</string>
    <string name="fnc_name_placRep">PlacementsWithRep</string>
    <string name="fnc_name_comb">Combinations</string>
    <string name="fnc_name_combRep">CombinationsWithRep</string>
    <string name="btn_txt">Resolve</string>
    <string name="et1_txt">write n</string>
    <string name="et2_txt">write m</string>
    <string name="et3_txt">write n1,n2,n3…</string>
    <string name="btn_clear_txt">Clear</string>
</resources>