<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_fnc_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/et1_txt"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_fnc_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/et2_txt"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et3"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/et3_txt"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et2" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsw_answer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/borders"
        app:layout_constraintBottom_toTopOf="@id/btn"
        app:layout_constraintTop_toBottomOf="@id/et3">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et2" />

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn" />

</androidx.constraintlayout.widget.ConstraintLayout>